--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     
     <body>
-
+         <!-- Comentario teste -->
         <aside>
             <img src="./src/imagens/logo.svg" alt="Logo NLW Space Time" class="logo">
             <img src="./src/imagens/foto-top-perfil.jpg" alt="Foto de Perfil" class="foto-perfil">
