--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     
     <body>
          <!-- Comentario teste -->
+        <p> Paragrafo teste </p>
         <aside>
             <img src="./src/imagens/logo.svg" alt="Logo NLW Space Time" class="logo">
             <img src="./src/imagens/foto-top-perfil.jpg" alt="Foto de Perfil" class="foto-perfil">
